--- a/dashboard/templates/ListOfReg/slaughter_list.html
+++ b/dashboard/templates/ListOfReg/slaughter_list.html
@@ -303,7 +303,7 @@
       </p>
   </a> </li>
 
-  <li class="nav-item"> <a href="{% url 'register_transfer' %}" class="nav-link"> <i class="nav-icon bi bi-circle"></i>
+  <li class="nav-item"> <a href="{% url 'transfer_list' %}" class="nav-link"> <i class="nav-icon bi bi-circle"></i>
     <p>
       Transferred Cattles
     </p>
