--- a/dashboard/templates/ListOfReg/ranch_list.html
+++ b/dashboard/templates/ListOfReg/ranch_list.html
@@ -272,7 +272,7 @@
       </p>
      </a>
      <ul class="nav nav-treeview">
-      <li class="nav-item"> <a href="{% url 'register_cattle' %}" class="nav-link"> <i class="nav-icon bi bi-circle"></i>
+      <li class="nav-item"> <a href="{% url 'cattle_list' %}" class="nav-link"> <i class="nav-icon bi bi-circle"></i>
               <p>
                 Available Cattles
               </p>
@@ -427,8 +427,6 @@ Lost Cattles
     </div>
   </div>
   
-
-
                 <!--end::Small Box Widget 4-->
               </div>
               <!--end::Col-->
