--- a/dashboard/templates/ListOfReg/sale_list.html
+++ b/dashboard/templates/ListOfReg/sale_list.html
@@ -280,7 +280,7 @@
       </p>
      </a>
      <ul class="nav nav-treeview">
-      <li class="nav-item"> <a href="{% url 'register_cattle' %}" class="nav-link"> <i class="nav-icon bi bi-circle"></i>
+      <li class="nav-item"> <a href="{% url 'cattle_list' %}" class="nav-link"> <i class="nav-icon bi bi-circle"></i>
               <p>
                 Available Cattles
               </p>
