--- a/dashboard/templates/home/index.html
+++ b/dashboard/templates/home/index.html
@@ -287,7 +287,7 @@
               </p>
              </a>
              <ul class="nav nav-treeview">
-              <li class="nav-item"> <a href="{% url 'register_cattle' %}" class="nav-link"> <i class="nav-icon bi bi-circle"></i>
+              <li class="nav-item"> <a href="{% url 'cattle_list' %}" class="nav-link"> <i class="nav-icon bi bi-circle"></i>
                       <p>
                         Available Cattles
                       </p>
@@ -457,7 +457,7 @@
                     ></path>
                   </svg>
                   <a
-                    href="{% url 'register_cattle' %}"
+                    href="#"
                     class="small-box-footer link-dark link-underline-opacity-0 link-underline-opacity-50-hover"
                   >
                     register cattle <i class="bi bi-link-45deg"></i>
